--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "export": "nuxt export",
     "deploy": "firebase use tabby-4af5b && npm run build && npm run generate && firebase deploy"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/firebase": "^6.1.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "firebase": "^7.17.1",
+    "lodash": "^4.17.19",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
