--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/pwa": "^3.0.0-beta.20",
     "firebase": "^7.17.1",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "nuxt": "^2.14.0"
   },
   "devDependencies": {
