--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/firebase": "^6.1.1",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "feather-icons": "^4.28.0",
     "firebase": "^7.17.1",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
