--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "deploy": "firebase use tabby-4af5b && npm run build && npm run generate && firebase deploy"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/axios": "^5.13.0",
     "@nuxtjs/firebase": "^6.1.1",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/pwa": "^3.3.5",
     "feather-icons": "^4.28.0",
-    "firebase": "^7.17.1",
-    "lodash": "^4.17.19",
-    "moment": "^2.27.0",
-    "nuxt": "^2.14.0"
+    "firebase": "^7.24.0",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.1",
+    "nuxt": "^2.14.12"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^2.1.0"
